# ml_workbench

./: .gitignore  Dockerfile  README.md  Readme.md  docker-compose.mcp-postgres.yml  pyproject.toml
clustering/parallel_compute/: distance.py
clustering/sample/: ahc.py  dbscan.py  gmm.py  kmean.py  ms.py
inference/meta_learning/: lit_base.py  tf_base.py  torch_base.py
inference/transfer_learning/: tf_base.py  torch_base.py
mcp/: cmd.py  job_queries.py
mcp_custom/: cmd.py
mcp_custom/client/: postgress.py
mcp_custom/server/: postgress.py
resources/: config.yaml
stockpile/: google.py
training/meta_learning/: lit_base.py  tf_base.py  torch_base.py  vit_base.py
training/transfer_learning/: tf_base.py  torch_base.py  vit_base.py
training/vision_transformer_classify/: torchvision_trainer.py  vit_automodel_trainer.py
utils/: config_loader.py
vision_transformer/: yolo_trainer.py
