[project]
name = "ml-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "psycopg2-binary>=2.9.0",
  "mcp>=1.28.1",
  "psycopg2>=2.9.12",
]


[project.scripts]
agent = "mcp.cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp", "utils"]
